# Vesuve

./: .clang-format  .gitignore  CMakeLIsts.txt  CMakePresets.json  README.md  TODO.md
assets/: scaled_teapot.glb  scaled_teapot_scene.glb
src/: AccelerationStructure.cxx  AccelerationStructure.hpp  BottomLevelAccelerationStructure.cxx  BottomLevelAccelerationStructure.hpp  BottomLevelGeometry.hpp  Buffer.cxx  Buffer.hpp  CMakeLists.txt  Camera.cxx  Camera.hpp  CommandBuffer.cxx  CommandBuffer.hpp  CommandPool.cxx  CommandPool.hpp  ComputePipeline.cxx  ComputePipeline.hpp  DebugUtils.cxx  DebugUtils.hpp  DescriptorSet.cxx  DescriptorSet.hpp  DescriptorSetLayout.cxx  DescriptorSetLayout.hpp  Device.cxx  Device.hpp  Fence.cxx  Fence.hpp  FrameData.cxx  FrameData.hpp  Image.cxx  Image.hpp  Instance.cxx  Instance.hpp  Materials.cxx  Materials.hpp  MemoryTypeFinder.cxx  MemoryTypeFinder.hpp  PhysicalDevice.cxx  PhysicalDevice.hpp  PhysicalDevicePicker.cxx  PhysicalDevicePicker.hpp  (+48 more)
src/shaders/: blinn_phong.frag  closestHit.rchit  colored_triangle_mesh.vert  gradient.comp  gradient_color.comp  input_structures.glsl  mesh.frag  mesh.vert  miss.rmiss  raygen.rgen  sky.comp
